--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@strapi/plugin-users-permissions": "4.15.4",
     "@strapi/strapi": "4.15.4",
     "better-sqlite3": "8.6.0",
+    "install": "^0.13.0",
+    "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
